k8s/network-policy/allows-jobtracker-apps-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jobtracker-apps-dns
  namespace: jobtracker-dev

spec:
  podSelector:
    matchLabels:
      network-role: jobtracker-app

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
