k8s/network-policy/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-all
  namespace: jobtracker-dev

spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
