k8s/network-policy/gateway-application.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-gateway-to-application
  namespace: jobtracker-dev

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: application-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway-service
      ports:
        - protocol: TCP
          port: 8082
