k8s/network-policy/gateway-service-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-gateway-egress
  namespace: jobtracker-dev

spec:
  podSelector:
    matchLabels:
      app: gateway-service

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: application-service
      ports:
        - protocol: TCP
          port: 8082

    - to:
        - podSelector:
            matchLabels:
              app: user-service
      ports:
        - protocol: TCP
          port: 8081
