k8s/network-policy/gateway-user.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-gateway-to-user
  namespace: jobtracker-dev

spec:
  podSelector:
    matchLabels:
      app: user-service

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway-service
      ports:
        - protocol: TCP
          port: 8081
