k8s/network-policy/user-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-user-to-postgres
  namespace: jobtracker-dev

spec:
  podSelector:
    matchLabels:
      app: postgres-user

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: user-service
      ports:
        - protocol: TCP
          port: 5432
