k8s/network-policy/user-service-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-user-egress
  namespace: jobtracker-dev

spec:
  podSelector:
    matchLabels:
      app: user-service

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres-user
      ports:
        - protocol: TCP
          port: 5432
